# PlanGuidePlanner

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  StudyGuide.js  StudyGuide.worker.js  _headers  index.html  planguideplanner.js  studyguide.js  studyguide.worker.js
.github/workflows/: build.yml  dev-build.yml  release.yml
PlanGuidePlanner/: Application.cpp  Application.h  CMakeLists.txt  Example.xml  LegacyXmlParsers.cpp  LegacyXmlParsers.h  WindowConsole.cpp  WindowConsole.h  XmlParser.cpp  XmlParser.h  main.cpp
PlanGuidePlanner/creator/: Creator.cpp  Creator.h  Creator.ui
PlanGuidePlanner/guide/: GuideData.cpp  NewGuideData.cpp  NewGuideData.h  OldGuideData.cpp  OldGuideData.h
PlanGuidePlanner/themes/: BlueTheme.h  ContrastTheme.h  GreenTheme.h  GuidePalette.cpp  GuidePalette.h  OrangeTheme.h  RedTheme.h
PlanGuidePlanner/translations/: PlanGuidePlanner_ce.ts  PlanGuidePlanner_en.ts  PlanGuidePlanner_nl.ts  StudyGuide_nl.ts
PlanGuidePlanner/ui/: About.ui  AboutWindow.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  PreferenceWindow.cpp  PreferenceWindow.h  PreferenceWindow.ui  StartScreen.cpp  StartScreen.h  StartScreen.ui
PlanGuidePlanner/ui/dialogs/: LoadGuide.cpp  LoadGuide.h  LoadGuide.ui  RestartDialog.cpp  RestartDialog.h
PlanGuidePlanner/ui/guide/: Goal.cpp  Goal.h  Guide.cpp  Guide.h  Guide.ui  Index.cpp  Index.h  Report.cpp  Report.h  Test.cpp  Test.h
PlanGuidePlanner/ui/newGuideExpeiment/: NewGuide.cpp  NewGuide.h
PlanGuidePlanner/ui/newGuideExperiment/: NewGuide.cpp  NewGuide.h  NewGuide.ui  NewReport.cpp  NewReport.h  NewTest.cpp  NewTest.h  NewTest.ui
PlanGuidePlanner/ui/prototypeGui/: newGuidePrototype.ui  newguideprototype.cpp  newguideprototype.h
StudyGuide/: Application.cpp  Application.h  CMakeLists.txt  Example.xml  LegacyXmlParsers.cpp  XmlParser.cpp  XmlParser.h  config.h.in  main.cpp
StudyGuide/creator/: Creator.cpp  Creator.h  Creator.ui
StudyGuide/guide/: GuideData.cpp  GuideData.h
StudyGuide/themes/: GuidePalette.cpp  GuidePalette.h
StudyGuide/translations/: StudyGuide_en.ts  StudyGuide_nl.ts
StudyGuide/ui/: About.ui  AboutWindow.cpp  AboutWindow.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PreferenceWindow.cpp  PreferenceWindow.h  PreferenceWindow.ui  StartScreen.cpp  StartScreen.h
StudyGuide/ui/dialogs/: LoadGuide.cpp  LoadGuide.h  RestartDialog.h  RestartDialog.ui
StudyGuide/ui/guide/: Goal.cpp  Goal.h  Goal.ui  Guide.cpp  Guide.h  Guide.ui  Index.cpp  Index.h  Index.ui  Report.cpp  Report.h  Report.ui  Test.cpp  Test.h  Test.ui
buildconfig/: CMakeLists.txt  Config.cpp.in  Config.h
buildconfig/Android/: AndroidManifest.xml
dev/: index.html  planguideplanner.js  planguideplanner.worker.js
nightly/: planguideplanner.js
program_info/: CMakeLists.txt  genicons.sh  planguideplanner-mime.xml  planguideplanner.desktop  planguideplanner.rc  studyguide-mime.xml  studyguide.desktop  studyguide.rc
program_info/Android/: AndroidManifest.xml.in
tests/: CMakeLists.txt  LegacyXmlParsers_test.cpp  XmlParser_test.cpp
tests/Legacy Parser Test/: legacyFormat.xml  v1.xml
tests/XML Parser Test/: testfile.xml
tests/testdata/: testfile.xml
